--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        header
-    </header>
-
-    <main>
-        main
-    </main>
-
-    <div class="sidebar">
-        sidebar
+    <div class="wrapper">
+        <header class="c-header">
+            header
+        </header>
+        <main class="c-main">
+            main
+        </main>
+       <aside class="c-sidebar">
+            sidebar
+       </aside>
+        <aside class="c-aside-main">
+            aside
+        </aside>
+        <aside class="c-aside-sec">
+            aside
+        </aside>
+        <footer class="c-footer">
+            footer
+        </footer>
     </div>
-
-    <aside>
-        aside
-    </aside>
-
-    <footer>
-        footer
-    </footer>
-</body>
-</html>
