--- a/index2.html
+++ b/index2.html
@@ -11,22 +11,22 @@
 <body>
     <div class="wrapper">
         <header class="cheader">
-            header
+            HEADER
         </header>
         <main class="cmain">
-            main
+            MAIN
         </main>
         <aside class="csidebar">
-            sidebar
+            SIDEBAR
         </aside>
         <aside class="caside1">
-            aside
+            ASIDE
         </aside>
         <aside class="caside2">
-            aside
+            ASIDE
         </aside>
         <footer class="cfooter">
-            footer
+            FOOTER
         </footer>
     </div>
 </body>
