--- a/index3.html
+++ b/index3.html
@@ -16,12 +16,12 @@
         <aside class="chero">
             HERO
         </aside>
-        <aside class="csub">SUB</aside>
-        <aside class="csub">SUB</aside>
-        <aside class="csub">SUB</aside>
-        <aside class="csub">SUB</aside>
-        <aside class="csub">SUB</aside>
-        <aside class="csub">SUB</aside>
+        <aside class="csub1">SUB</aside>
+        <aside class="csub2">SUB</aside>
+        <aside class="csub3">SUB</aside>
+        <aside class="csub4">SUB</aside>
+        <aside class="csub5">SUB</aside>
+        <aside class="csub6">SUB</aside>
         <main class="ccontent">
             CONTENT
         </main>
