--- a/index4.html
+++ b/index4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,12 +15,12 @@
     <aside class="chero">
         HERO
     </aside>
-    <aside class="Csub1">SUB</aside>
-    <aside class="Csub2">SUB</aside>
-    <aside class="Csub3">SUB</aside>
-    <aside class="Csub4">SUB</aside>
-    <aside class="Csub5">SUB</aside>
-    <aside class="Csub6">SUB</aside>
+    <aside class="csub" id="idsub1">SUB</aside>
+    <aside class="csub" id="idsub2">SUB</aside>
+    <aside class="csub" id="idsub3">SUB</aside>
+    <aside class="csub" id="idsub4">SUB</aside>
+    <aside class="csub" id="idsub5">SUB</aside>
+    <aside class="csub" id="idsub6">SUB</aside>
     <main class="ccontent">CONTENT</main>
     <aside class="caside">ASIDE</aside>
     <footer class="cfooter">FOOTER</footer>
