Feito o layoult novo do site uau.

--- a/index4.html
+++ b/index4.html
@@ -9,20 +9,22 @@
     <link rel="stylesheet" href="style4.css">
 </head>
 <body>
-    <header class="cheader">
-        HEADER
-    </header>
-    <aside class="chero">
-        HERO
-    </aside>
-    <aside class="csub" id="idsub1">SUB</aside>
-    <aside class="csub" id="idsub2">SUB</aside>
-    <aside class="csub" id="idsub3">SUB</aside>
-    <aside class="csub" id="idsub4">SUB</aside>
-    <aside class="csub" id="idsub5">SUB</aside>
-    <aside class="csub" id="idsub6">SUB</aside>
-    <main class="ccontent">CONTENT</main>
-    <aside class="caside">ASIDE</aside>
-    <footer class="cfooter">FOOTER</footer>
+    <div class="wrapper">
+        <header class="cheader">
+            HEADER
+        </header>
+        <aside class="chero">
+            HERO
+        </aside>
+        <aside class="csub" id="idsub1">SUB</aside>
+        <aside class="csub" id="idsub2">SUB</aside>
+        <aside class="csub" id="idsub3">SUB</aside>
+        <aside class="csub" id="idsub4">SUB</aside>
+        <aside class="csub" id="idsub5">SUB</aside>
+        <aside class="csub" id="idsub6">SUB</aside>
+        <main class="ccontent">CONTENT</main>
+        <aside class="caside">ASIDE</aside>
+        <footer class="cfooter">FOOTER</footer>
+    </div>
 </body>
 </html>
